# residual_stress_calculator

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: abaqus_test.cpp.AB420C4DFA27F843.idx  fea_solver.cpp.4371BBB945D6C134.idx  fea_solver.hpp.73015DDA2D443E9A.idx  main.cpp.85545C0B4D961634.idx  mesh_handler.cpp.C0F6CB58C5D18C62.idx  mesh_handler.hpp.649D8B74B526F5A5.idx  mesh_handler_tester.cpp.2010035B19BE4FA1.idx  optimizer.cpp.5973B2B47C4C93AE.idx  set_stress_test.cpp.C7E25112C14A745D.idx  stress_field.cpp.62228E6382D9283E.idx  tester.cpp.E749FFA27C3C2280.idx
calculix_testing/: model.frd  model.inp
include/: cgal_includes.hpp
old_src/: force_estimator.cpp  force_estimator.hpp  main.cpp
src/: abaqus_test.cpp  abaqus_test.py  bin_plotter.py  convert_stl_to_vtk.py  cut_visualizer.py  fea_solver.cpp  fea_solver.hpp  force_estimator.cpp  force_estimator.hpp  main.cpp  mesh_handler.cpp  mesh_handler.hpp  mesh_handler_tester.cpp  set_stress_test.cpp  tester.cpp
